examples/test/testpolicy13863.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13863
  namespace: namespace230
spec:
  podSelector:
    matchLabels:
      key42: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value16
      podSelector:
        matchLabels:
          key49: value2
          key7: value36
          key5: value10
